tests/errors/lex10.kt
fun main() {
    val a = ~1
    val b = 1 << 2
    val c = 1 >> 2
    val d = a &= b
    val e = a |= b
    val f = a ^= b
    val g = a >>= 1
    val h = a <<= 1
    val i = a & b
    val j = a | b
    val k = a ^ b
}